login authentication is done

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 PORT=5050
+
+MONGODB_URI=mongodb+srv://csenajmulislamnaeem:csenaeem019@cluster0.aqqhics.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+
+JWT_SECRET=naeem
