--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ MONGODB_URI=mongodb+srv://csenajmulislamnaeem:csenaeem019@cluster0.aqqhics.mongo
 
 
 JWT_SECRET=naeem
+
+# no need here
+CLOUDENARY_SECRET=fXBF_Nfrk696wr6D-sT0mA2f8O4
