--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "../node_modules/.bin/nodemon backend/server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
