--- a/.env
+++ b/.env
@@ -1,9 +1,8 @@
 PORT=5050
 
-MONGODB_URI=mongodb+srv://csenajmulislamnaeem:csenaeem019@cluster0.aqqhics.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=yourDatabase URL
 
-
-JWT_SECRET=naeem
+JWT_SECRET=YourSecrete
 
 # no need here
-CLOUDENARY_SECRET=fXBF_Nfrk696wr6D-sT0mA2f8O4
+CLOUDENARY_SECRET=Cloudenary Secret
